# discord-telegram-simple-relay

./: Cargo.toml  Dockerfile  README.md  fly.toml
src/: main.rs
