[package]
name = "discord-telegram-simple-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
serenity = "0.11.6"
teloxide = { version = "0.12.2", features = ["rustls"] }
