[package]
name = "discord-telegram-simple-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11.6", default-features = false, features = ["standard_framework", "framework", "client", "builder", "gateway", "rustls_backend"] }
teloxide = { version = "0.12.2", default-features = false, features = ["rustls"] }
